# openMCMC

./: .gitignore  .pylintrc  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: PR.yml  build_package.yml  code_formatting.yml  main.yml  manual_build.yml  manual_publish_docs.yml  manual_release.yml  manual_sonarcloud_analysis.yml  pydocstyle_check.yml  pylint_check.yml  release_tagging.yml  reuse_compliance.yml  run_tests.yml  sonarcloud_analysis.yml
docs/: index.md
docs/openmcmc/: gmrf.md  mcmc.md  model.md  parameter.md
docs/openmcmc/distribution/: distribution.md  location_scale.md
docs/openmcmc/sampler/: metropolis_hastings.md  reversible_jump.md  sampler.md
examples/: 1_model_distributions.ipynb  2_samplers.ipynb  3_linear_regression.ipynb  4_GMRF_smoother.ipynb
openmcmc/distribution/distribution/: index.html
openmcmc/distribution/location_scale/: index.html
openmcmc/gmrf/: index.html
openmcmc/mcmc/: index.html
openmcmc/model/: index.html
openmcmc/parameter/: index.html
openmcmc/sampler/metropolis_hastings/: index.html
openmcmc/sampler/reversible_jump/: index.html
openmcmc/sampler/sampler/: index.html
search/: search_index.json
src/openmcmc/: __init__.py  gmrf.py  mcmc.py  model.py  parameter.py
src/openmcmc/distribution/: __init__.py  distribution.py  location_scale.py
src/openmcmc/sampler/: __init__.py  metropolis_hastings.py  reversible_jump.py  sampler.py
tests/: test_distribution.py  test_grmf.py  test_mcmc.py  test_model.py  test_parameter.py  test_reversible_jump.py  test_sampler.py
