# SPDX-FileCopyrightText: 2024 Shell Global Solutions International B.V. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openmcmc"
version = "1.0.7"
description = "openMCMC tools"
authors = ["Bas van de Kerkhof", "Matthew Jones", "Ross Towe", "David Randell"]
homepage = "https://sede-open.github.io/openMCMC/"
repository = "https://github.com/sede-open/openMCMC"
documentation = "https://sede-open.github.io/openMCMC/"
readme = "README.md"
license = "Apache-2.0"
keywords = ["Markov Chain Monte Carlo", "MCMC"]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=2.3.3"
numpy = ">=2.4.0"
scipy = ">=1.16.3"
tqdm = ">=4.67.1"
matplotlib = {version = ">=3.10.8", optional = true }
pytictoc = {version = ">=1.5.3", optional = true }

[tool.poetry.extras]
extras = ["matplotlib", "pytictoc"]

[tool.poetry.group.contributor]
optional = true

[tool.poetry.group.contributor.dependencies]
black = ">=25.12.0"
isort = ">=7.0.0"
pydocstyle = ">=6.3.0"
pylint = ">=4.0.4"
pytest = ">=9.0.2"
pytest-cov = ">=7.0.0"
pytest-cases = ">=3.9.1"
mkdocs-material = ">=9.7.1"
mkdocstrings-python = ">=2.0.1"

[tool.pytest.ini_options]
addopts = "--cov=openmcmc --cov-fail-under=90"
testpaths = [
    "tests",
]

[tool.coverage.run]
relative_files = true
source = ["src/"]

[tool.pylint]
fail-under=9.0
max-line-length=120
py-version=3.11

[tool.black]
line-length = 120
target-version = ['py311']

[tool.pydocstyle]
convention = "google"
add-ignore = ["D105", "D107"]

[tool.isort]
profile = "black"
